# goopgoopdrooptroop

./: .gitignore  pyproject.toml
docs/: art.py  goop.py  index.html  missions.py  web_game.py
goopgoopdrooptroop/: frontend.py  gacha.py  game.py  goop.py  missions.py  net.py  server.py
goopgoopdrooptroop.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
